--- a/README
+++ b/README
@@ -15,9 +15,9 @@
  * limitations under the License.
  */
 
-Welcome to Apache Felix Karaf
-====================================
-Apache Felix Karaf is a small OSGi based kernel which provides a
+Welcome to Apache Karaf
+=======================
+Apache Karaf is a small OSGi based kernel which provides a
 lightweight container onto which various bundles can be deployed.
 
 The following features are included:
@@ -46,32 +46,32 @@ The following features are included:
 
 Getting Started
 ===============
-For an Apache Felix Karaf source distribution, please read
-BUILDING for instructions on building Apache Felix Karaf.
+For an Apache Karaf source distribution, please read
+BUILDING for instructions on building Apache Karaf.
 
-For an Apache Felix Karaf binary distribution, please read
+For an Apache Karaf binary distribution, please read
 RELEASE-NOTES for installation instructions and list of supported 
 and unsupported features.
 
 The PDF manual is the right place to find any information about Karaf.
 
 Alternatively, you can also find out how to get started here:
-    http://felix.apache.org/site/apache-felix-karaf.html
+    http://karaf.apache.org/
 
 If you need more help try talking to us on our mailing lists
-    http://felix.apache.org/site/mailinglists.html
+    http://karaf.apache.org/site/mailinglists.html
 
-If you find any issues with Apache Felix Karaf, please submit reports
+If you find any issues with Apache Karaf, please submit reports
 with JIRA here:
-    http://issues.apache.org/jira/browse/FELIX
+    http://issues.apache.org/jira/browse/KARAF
 
 We welcome contributions, and encourage you to get involved in the 
-Felix community. If you'd like to learn more about how you can
+Karaf community. If you'd like to learn more about how you can
 contribute, please see:
-    http://felix.apache.org/site/contributing.html
+    http://karaf.apache.org/contributing.html
 
-Many thanks for using Apache Felix Karaf.
+Many thanks for using Apache Karaf.
 
 
-The Felix Team
+The Karaf Team
 
